[gd_scene load_steps=2 format=3 uid="uid://dn78ja6l5jskr"]

[ext_resource type="Script" uid="uid://c744bo2pfaq2j" path="res://Scene/battle.gd" id="1_t35rp"]

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t35rp")

[node name="BattleZone" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -317.5
offset_top = -226.0
offset_right = 317.5
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerPanel" type="Panel" parent="BattleZone"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 322.0
grow_vertical = 2

[node name="PlayerName" type="Label" parent="BattleZone/PlayerPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 42
text = "Player"

[node name="PlayerStatsPanel" type="Panel" parent="BattleZone/PlayerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -104.0
offset_right = 129.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerStats" type="Label" parent="BattleZone/PlayerPanel/PlayerStatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28

[node name="MonsterPanel" type="Panel" parent="BattleZone"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -313.0
offset_right = 3.0
grow_horizontal = 0
grow_vertical = 2

[node name="MonsterName" type="Label" parent="BattleZone/MonsterPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 42

[node name="MonsterStatsPanel" type="Panel" parent="BattleZone/MonsterPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -104.0
offset_right = 130.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2

[node name="MonsterStats" type="Label" parent="BattleZone/MonsterPanel/MonsterStatsPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 28
